--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -134,7 +134,7 @@ jobs:
           commit_message: "Update catalog-info.yaml with RDS endpoint"
           push_options: '--force'
 
-  obs-apply:
+  ingress-obs-apply:
     runs-on: ubuntu-latest
     needs: kubeconfig
     steps:
@@ -157,6 +157,21 @@ jobs:
         run: |
           curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
           helm version
+
+      - name: Add Kong Helm repository
+        run: |
+          helm repo add kong https://charts.konghq.com
+          helm repo update
+  
+      - name: Install Kong
+        run: |
+          helm upgrade --install kong kong/kong --version 2.39.3 -f kong.yaml -n vkpr
+      
+      - name: Apply Kong Plugins
+        run: |
+            kubectl apply -f kong-acme.yaml -n vkpr    
+            kubectl apply -f kong-plugin-basicauth.yaml -n vkpr    
+
 
       - name: Add OpenTelemetry Helm repository
         run: |
