--- a/kong.yaml
+++ b/kong.yaml
@@ -28,8 +28,17 @@ env:
   admin_gui_api_url: https://manager.teste.platform.vee.codes
   admin_gui_path: /manager
   admin_gui_url: https://manager.teste.platform.vee.codes/manager
+  database: postgres
   log_level: notice
-  database: "off"
+  pg_database: kong
+  pg_host: postgres-postgresql.vkpr
+  pg_password:
+    valueFrom:
+      secretKeyRef:
+        key: postgres-password
+        name: postgres-postgresql
+  pg_port: 5432
+  pg_user: postgres
   portal: false
   proxy_url: https://teste.platform.vee.codes
   tracing_instrumentations: all
