update acme plugin

--- a/kong-acme.yaml
+++ b/kong-acme.yaml
@@ -7,7 +7,11 @@ metadata:
  labels:
    global: "true"
 config:
+  storage: kong
   allow_any_domain: true
-  account_email: example@example.com
-  api_uri: https://acme-staging-v02.api.letsencrypt.org/directory
+  tos_accepted: true
+  fail_backoff_minutes: 1
+  account_email: 'platformss@vee.codes'
+  # api_uri: https://acme-staging-v02.api.letsencrypt.org/directory
+  api_uri: https://acme-v02.api.letsencrypt.org/directory
 plugin: acme
