--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -256,5 +256,14 @@ jobs:
       - name: Install Loki Promtail
         run: |
           helm upgrade --install loki grafana/loki-stack --version 2.9.11 -f loki.yaml -n vkpr --create-namespace
-
+      
+      - name: Check Ingress
+        run: |
+          kubectl get ingress -A -o=jsonpath='{range .items[*]}{.spec.rules[*].host}{"\n"}{end}' | \
+          while read -r host; do
+              echo "Host: $host"
+              curl -I -L "$host"
+              echo "------------------------------------"
+          done
+                    
                   
